Fix css links, add routes to Controllers

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,5 +1,9 @@
-body {
+/* Global fonts */
+* {
     font-family: "Montserrat", sans-serif;
+}
+
+body {
     background-color: #cce7ff;
     margin: 0;
     padding: 0;
