--- a/resources/css/admin_participant.css
+++ b/resources/css/admin_participant.css
@@ -238,3 +238,75 @@ body {
 .group-card button.delete:hover {
     background-color: #f08a8a;
 }
+
+/* Modal */
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.modal-content {
+    background-color: white;
+    border: 1px solid black;
+    padding: 20px;
+    border-radius: 15px;
+    text-align: center;
+    width: 300px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+}
+
+.modal-content img.warning-icon {
+    width: 50px;
+    margin-bottom: 10px;
+}
+
+.modal-content h2 {
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
+.modal-buttons {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+}
+
+.btn-cancel {
+    background-color: #CBCBCB;
+    border: 1px solid black;
+    padding: 10px;
+    border-radius: 15px;
+    cursor: pointer;
+    flex: 1;
+    font-weight: 700;
+    font-size: 18px;
+    box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.1);
+}
+
+.btn-cancel:hover {
+    background-color: #bbb;
+}
+
+.btn-confirm {
+    background-color: #FF787A;
+    border: 1px solid black;
+    padding: 10px;
+    border-radius: 15px;
+    cursor: pointer;
+    flex: 1;
+    font-weight: 700;
+    font-size: 18px;
+    box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.1);
+}
+
+.btn-confirm:hover {
+    background-color: #e57373;
+}
