--- a/resources/css/register_lomba.css
+++ b/resources/css/register_lomba.css
@@ -1,44 +1,39 @@
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
     background-color: #cce7ff;
     margin: 0;
     padding: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 115vh;
+    height: 100vh;
     flex-direction: column;
 }
 
 .container {
-    background-color: #F9F9F9;
+    background-color: #f9f9f9;
     border-radius: 10px;
     border: 2px solid black;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    max-width: 1000px; 
-    width: 95%;
+    max-width: 900px;
+    width: 100%;
     padding: 20px;
-    position: relative;
-    margin: 20px auto;
 }
 
 .header {
     display: flex;
     align-items: center;
-    justify-content: center; 
-    padding: 1rem;
+    justify-content: center;
 }
 
 .header img {
     margin-top: 13px;
-    width: 70px; 
-    height: 60px;
+    width: 60px;
+    height: 50px;
 }
 
 .header h1 {
-    font-size: 40px; 
-    font-weight: 700;
-    text-align: center;
+    font-size: 30px;
     font-style: italic;
 }
 
@@ -47,16 +42,23 @@ body {
 }
 
 .title-container {
-    background: linear-gradient(to right, #FFFCC8, #D4FFC8, #D7ECFF, #E9D7FF, #FFCCCD);
+    background: linear-gradient(
+        to left,
+        #fffcc8,
+        #d4ffc8,
+        #d7ecff,
+        #e9d7ff,
+        #ffcccd
+    );
     border-radius: 10px;
     text-align: center;
     margin-bottom: 0;
-    font-size: 30px;
+    font-size: 25px;
     position: relative;
 }
 
 .title-container h2 {
-    font-weight: 850;
+    font-weight: 800;
     padding: 10px;
     margin-top: 0px;
     margin-bottom: 5px;
@@ -64,25 +66,24 @@ body {
     border-radius: 10px 10px 5px 5px;
 }
 
-
 .close-button-container {
-    position: absolute;
-    top: 15px;
-    right: 15px; 
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 40px;
-    height: 40px;
-    border: 2px solid #fff;
-    border-radius: 50%;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    border: 1.5px solid black;
+    border-radius: 10px;
+    padding: 4px;
     background-color: white;
     cursor: pointer;
 }
 
-.close-button-container span {
-    font-size: 24px;
-    color: black;
+.close-button-container img {
+    width: 25px;
+    height: 25px;
+    object-fit: cover;
+    border: 1px dashed black;
+    padding: 5px;
 }
 
 .content {
@@ -92,18 +93,19 @@ body {
     border-top: none;
     border-radius: 0 0 10px 10px;
     padding: 20px;
+    background: #ffffff;
 }
 
 .sidebar {
-    width: 20%;
+    /* width: 250px; */
     padding: 20px;
-    border-right: 1px solid #ddd;
+    /* border-right: 1px solid #ddd; */
 }
 
 .sidebar .step {
     display: flex;
     align-items: center;
-    margin-bottom: 20px;
+    margin-bottom: 51px;
     position: relative;
 }
 
@@ -111,13 +113,13 @@ body {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background: linear-gradient(75deg, #FFFCC8, #D4FFC8);
+    background: linear-gradient(75deg, #fffcc8, #d4ffc8);
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 20px;
     font-weight: 800;
-    color: #33BB0E;
+    color: #33bb0e;
     margin-right: 10px;
     z-index: 1;
     box-sizing: border-box;
@@ -125,28 +127,28 @@ body {
 
 .sidebar .step .text {
     font-size: 15px;
-    color: #33BB0E;
+    color: #33bb0e;
     font-weight: 700;
 }
 
 .sidebar .step.inactive .circle {
-    background: linear-gradient(75deg, #E0E0E0, #CBCBCB);
-    color: #A4A4A4;
+    background: linear-gradient(75deg, #e0e0e0, #cbcbcb);
+    color: #a4a4a4;
 }
 
 .sidebar .step.inactive .text {
-    color: #A4A4A4;
+    color: #a4a4a4;
 }
 
 .sidebar .step::after {
-    content: '';
+    content: "";
     position: absolute;
     left: 25px;
-    top: 75%;
+    top: 150%;
     transform: translateY(-50%);
     width: 4px;
-    height: calc(100% + 20px); 
-    background-color: #ccc; 
+    height: calc(80% + 0px);
+    background-color: #ccc;
     z-index: 0;
 }
 
@@ -159,12 +161,12 @@ body {
 }
 
 .sidebar .step.completed .circle {
-    background: linear-gradient(75deg, #B8E994, #33BB0E);
+    background: linear-gradient(75deg, #b8e994, #33bb0e);
     color: white;
 }
 
 .sidebar .step.completed .text {
-    color: #33BB0E;
+    color: #33bb0e;
 }
 
 .sidebar .step.completed + .step::after {
@@ -174,9 +176,10 @@ body {
 .form-container {
     width: 70%;
     padding: 20px;
-    background-color: #FFFCC8;
+    background-color: #fffcc8;
     border-radius: 15px;
     margin-left: 20px;
+    border: 1px solid black;
 }
 
 .form-container h2 {
@@ -196,34 +199,53 @@ body {
 }
 
 .form-group input[type="text"],
-.form-group input[type="password"] {
+.form-group input[type="password"],
+.form-group input[type="confirm-password"] {
     width: calc(100% - 13px);
     padding: 7px;
     border: 1px solid #000000;
     border-radius: 20px;
     font-size: 13px;
+    box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.1);
+    background-color: #ffcccd;
 }
 
-.form-group input[type="text"] {
-    background-color: #FFCCCD;
+/* .form-group input[type="text"] {
+    background-color: #ffcccd;
 }
 
 .form-group input[type="password"] {
-    background-color: #FFF699;
+    background-color: #fff699;
+} */
+
+/* .form-group .confirm-password {
+    background-color: #ff787a;
+} */
+
+.form-group .requirements ul {
+    list-style-type: none;
+    padding: 0;
 }
 
-.form-group .requirements {
+.form-group .requirements li {
     font-size: 13px;
     color: #ff0000;
     margin-top: 5px;
 }
 
+.form-group .requirements li.valid {
+    font-size: 13px;
+    color: #00cc44;
+    margin-top: 5px;
+}
+
 .form-group .status {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .form-group .status input {
+    margin-top: 5px;
     margin-right: 10px;
 }
 
@@ -231,8 +253,49 @@ body {
     margin-right: 20px;
 }
 
-.form-group .confirm-password {
-    background-color: #FF787A;
+
+.input-container {
+    position: relative;
+    width: 100%;
+}
+
+.input-container input {
+    width: 100%;
+    padding-right: 40px; /* Ruang untuk tombol */
+    box-sizing: border-box;
+}
+
+
+
+.password-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+.password-container input {
+    width: 100%;
+    padding-right: 40px;
+}
+.password-container button {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.toggle-password {
+    position: absolute;
+    right: 50px;
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.toggle-password i {
+    color: #000;
 }
 
 .form-group .next-button {
@@ -243,16 +306,17 @@ body {
 .next-button button {
     font-weight: 800;
     padding: 10px 20px;
-    background-color: #D7ECFF;
+    background-color: #d7ecff;
     color: black;
-    border: 2px solid black;
+    border: 1px solid black;
     border-radius: 30px;
     font-size: 16px;
     cursor: pointer;
     display: flex;
     align-items: center;
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
     transition: all 0.3s ease;
+    box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.1);
 }
 
 .circle-icon {
@@ -269,17 +333,17 @@ body {
     font-size: 18px;
     transition: all 0.3s ease;
 }
-  
+
 .next-button button:hover {
-    background-color: #4CAF50; 
-    border-color: #4CAF50; 
-    color: white; 
+    background-color: #4caf50;
+    border-color: #4caf50;
+    color: white;
 }
 
 .next-button button:hover .circle-icon {
-    background-color: #4CAF50; 
-    border-color: #4CAF50; 
-    color: white; 
+    background-color: #4caf50;
+    border-color: #4caf50;
+    color: white;
 }
 
 .form-row {
