--- a/public/css/register_lomba1.css
+++ b/public/css/register_lomba1.css
@@ -42,7 +42,14 @@ body {
 }
 
 .title-container {
-    background: linear-gradient(to left, #FFFCC8, #D4FFC8, #D7ECFF, #E9D7FF, #FFCCCD);
+    background: linear-gradient(
+        to left,
+        #fffcc8,
+        #d4ffc8,
+        #d7ecff,
+        #e9d7ff,
+        #ffcccd
+    );
     border-radius: 10px;
     text-align: center;
     margin-bottom: 0;
@@ -80,7 +87,7 @@ body {
 }
 
 .close-button-container a {
-    display: inline-flex;
+    display: inline-flex; 
 }
 
 .content {
@@ -108,13 +115,13 @@ body {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background: linear-gradient(75deg, #FFFCC8, #D4FFC8);
+    background: linear-gradient(75deg, #fffcc8, #d4ffc8);
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 20px;
     font-weight: 800;
-    color: #33BB0E;
+    color: #33bb0e;
     margin-right: 10px;
     z-index: 1;
     box-sizing: border-box;
@@ -122,17 +129,17 @@ body {
 
 .sidebar .step .text {
     font-size: 15px;
-    color: #33BB0E;
+    color: #33bb0e;
     font-weight: 700;
 }
 
 .sidebar .step.inactive .circle {
-    background: linear-gradient(75deg, #E0E0E0, #CBCBCB);
-    color: #A4A4A4;
+    background: linear-gradient(75deg, #e0e0e0, #cbcbcb);
+    color: #a4a4a4;
 }
 
 .sidebar .step.inactive .text {
-    color: #A4A4A4;
+    color: #a4a4a4;
 }
 
 .sidebar .step::after {
@@ -156,12 +163,12 @@ body {
 }
 
 .sidebar .step.completed .circle {
-    background: linear-gradient(75deg, #B8E994, #33BB0E);
+    background: linear-gradient(75deg, #b8e994, #33bb0e);
     color: white;
 }
 
 .sidebar .step.completed .text {
-    color: #33BB0E;
+    color: #33bb0e;
 }
 
 .sidebar .step.completed + .step::after {
@@ -171,10 +178,10 @@ body {
 .form-container {
     width: 70%;
     padding: 20px;
-    background-color: #FFFCC8;
+    background-color: #fffcc8;
     border-radius: 15px;
     margin-left: 20px;
-    padding-top: 0;
+    border: 1px solid black;
 }
 
 .form-container h2 {
@@ -183,24 +190,8 @@ body {
     margin-bottom: 20px;
 }
 
-.form-row {
-    padding-top: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.form-row .form-group {
-    flex: 1;
-    margin-right: 20px;
-}
-
-.form-row .form-group:last-child {
-    margin-right: 0;
-}
-
 .form-group {
-    margin-bottom: 15px;
+    margin-bottom: 20px;
 }
 
 .form-group label {
@@ -209,44 +200,42 @@ body {
     margin-bottom: 5px;
 }
 
-.form-group input {
+.form-group input[type="text"],
+.form-group input[type="password"],
+.form-group input[type="confirm-password"] {
     width: calc(100% - 13px);
     padding: 7px;
     border: 1px solid #000000;
     border-radius: 20px;
     font-size: 13px;
     box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.1);
+    background-color: #ffcccd;
 }
 
-.form-group input[type="full-name"] {
-    background-color: #FFCCCD;
+.form-group .requirements ul {
+    list-style-type: none;
+    padding: 0;
 }
 
-.form-group input[type="github-id"] {
-    background-color: #FFCE48;
+.form-group .requirements li {
+    font-size: 13px;
+    color: #ff0000;
+    margin-top: 5px;
 }
 
-.form-group input[type="email"] {
-    background-color: #D4FFC8;
+.form-group .requirements li.valid {
+    font-size: 13px;
+    color: #00cc44;
+    margin-top: 5px;
 }
 
-.form-group input[type="birth-place"] {
-    background-color: #D7ECFF;
-}
-
-.form-group input[type="no-wa"] {
-    background-color: #FFAF7D;
-}
-
-.form-group input[type="date"] {
-    background-color: #E9D7FF;
-}
-
-.form-group input[type="line-id"] {
-    background-color: #FF4848;
+.form-group .status {
+    display: flex;
+    align-items: flex-start;
 }
 
 .form-group .status input {
+    margin-top: 5px;
     margin-right: 10px;
 }
 
@@ -254,17 +243,57 @@ body {
     margin-right: 20px;
 }
 
-.back-button,
-.next-button {
-    display: table-cell;
-    margin-right: 5px;
-    align-content: center;
+.input-container {
+    position: relative;
+    width: 100%;
+}
+
+.input-container input {
+    width: 100%;
+    padding-right: 40px; 
+    box-sizing: border-box;
+}
+
+.password-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+.password-container input {
+    width: 100%;
+    padding-right: 40px;
+}
+.password-container button {
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translateY(-50%);
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.toggle-password {
+    position: absolute;
+    right: 50px;
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.toggle-password i {
+    color: #000;
+}
+
+.form-group .next-button {
+    display: flex;
+    justify-content: flex-end;
 }
 
 .next-button button {
     font-weight: 800;
-    padding: 0 10px 0 20px;
-    background-color: #D7ECFF;
+    padding: 10px 20px;
+    background-color: #d7ecff;
     color: black;
     border: 1px solid black;
     border-radius: 30px;
@@ -272,8 +301,9 @@ body {
     cursor: pointer;
     display: flex;
     align-items: center;
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
     transition: all 0.3s ease;
+    box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.1);
 }
 
 .circle-icon {
@@ -282,18 +312,13 @@ body {
     align-items: center;
     width: 20px;
     height: 20px;
-    color: black;
     border-radius: 30px;
-    border: 1.5px solid black;
-    margin: 10px;
+    border: 1px solid black;
+    margin-left: 10px;
     font-size: 18px;
     transition: all 0.3s ease;
 }
 
-.circle-icon .back-button {
-    margin-left: 100px;
-}
-  
 .next-button button:hover {
     background-color: #95BEE1;
     border-color: #95BEE1;
@@ -304,31 +329,19 @@ body {
     border-color: #95BEE1;
 }
 
-.back-button button {
-    font-weight: 800;
-    padding: 0 20px 0 10px;
-    background-color: #FFCCCD; 
-    color: black;
-    border: 1px solid black;
-    border-radius: 30px;
-    font-size: 16px;
-    cursor: pointer;
+.form-row {
+    padding-top: 20px;
     display: flex;
-    align-items: center;
-    font-family: 'Montserrat', sans-serif;
-    transition: all 0.3s ease;
+    justify-content: space-between;
 }
 
-.back-button button:hover {
-    background-color: #FF787A; /* Warna saat hover */
-    border-color: #FF787A;
-    color: white;
+.form-row .form-group {
+    flex: 1;
+    margin-right: 20px;
 }
 
-.back-button button:hover .circle-icon {
-    background-color: #FF787A;
-    border-color: #FF787A;
-    color: white;
+.form-row .form-group:last-child {
+    margin-right: 0;
 }
 
 #toast-container {
