--- a/public/css/login.css
+++ b/public/css/login.css
@@ -86,6 +86,11 @@ body {
     padding: 5px; 
 }
 
+
+.close-button-container a {
+    display: inline-flex; 
+}
+
 .content {
     flex-direction: row;
     border: 0.25px dashed black;
@@ -96,7 +101,7 @@ body {
 }
 
 .form-container {
-    background: linear-gradient(to right, #ffcccd, #e9d7ff);
+    background: linear-gradient(to right, #ffcccd, #e9d7ff, #D7ECFF);
     box-shadow: 10px 10px 0 black;
     width: 100%;
     max-width: 600px;
@@ -123,7 +128,6 @@ body {
     padding: 7px 7px 7px 15px;
 }
 
-
 .form-group input[type="text"],
 .form-group input[type="password"] {
     width: 100%;
@@ -139,10 +143,30 @@ body {
     box-shadow: 6px 6px 0 black;
 }
 
-.form-group .login-button {
+.password-container {
+    position: relative;
     display: flex;
-    justify-content: flex-end;
+    align-items: center;
 }
+
+.password-container input {
+    flex: 1;
+}
+
+
+.toggle-password {
+    position: absolute;
+    right: 50px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.toggle-password i {
+    color: #000;
+}
+
 
 .login-button {
     display: flex;
@@ -165,11 +189,18 @@ body {
     transition: all 0.3s ease;
 }
 
+.login-button button a {
+    color: inherit;
+    text-decoration: none;
+}
+
+
 .login-button button:hover {
     background-color: #4caf50;
     border-color: #4caf50;
     color: white;
 }
+
 
 .footer {
     margin-top: 15px;
@@ -210,5 +241,53 @@ body {
     .form-container {
         width: 100%;
         margin-left: 0;
+    }
+}
+
+#toast-container {
+    position: fixed;
+    top: 10px; 
+    right: 10px;
+    z-index: 1000; 
+}
+
+.toast {
+    display: flex;
+    align-items: center;
+    background-color: #ffe5e5;
+    color: #d32f2f;
+    border: 1px solid #d32f2f;
+    padding: 10px 20px;
+    border-radius: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    font-size: 14px;
+    margin-bottom: 10px; /* Jarak antar toast */
+    animation: fadein 0.5s, fadeout 0.5s 3s;
+}
+
+.toast .icon {
+    margin-right: 10px;
+    font-size: 18px;
+}
+
+@keyframes fadein {
+    from {
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes fadeout {
+    from {
+        opacity: 1;
+        transform: translateY(0);
+    }
+    to {
+        opacity: 0;
+        transform: translateY(-10px);
     }
 }
