--- a/public/css/admin_register.css
+++ b/public/css/admin_register.css
@@ -1,5 +1,8 @@
-body {
+* {
     font-family: "Montserrat", sans-serif;
+}
+
+body {
     background-color: #cce7ff;
     margin: 0;
     padding: 0;
